--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,17 @@ html {
 	font-size: 250%;
 }
 
+#calendly {
+	//background-color: blue;
+	color: white;
+	font-size: 18px;
+	padding: 15px 30px;
+	border-radius: 8px;
+	border: none;
+	cursor: pointer;
+	margin-top: 20px;
+  }
+
 .header-icon {
 	height: 150px;
 	width: 150px;
